--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,16 @@
       <artifactId>atlantafx-base</artifactId>
       <version>2.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.13.4.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20231013</version> <!-- Aktuelle Version überprüfen -->
+    </dependency>
   </dependencies>
 
   <build>
